[gd_scene load_steps=11 format=2]

[ext_resource path="res://HealthDisplay.tscn" type="PackedScene" id=1]
[ext_resource path="res://Parking pack/PNG/Cars/car1_red.png" type="Texture" id=2]
[ext_resource path="res://CarScript.gd" type="Script" id=3]
[ext_resource path="res://PlayerFSM.gd" type="Script" id=4]
[ext_resource path="res://Parking pack/PNG/Other/CarLight.png" type="Texture" id=5]

[sub_resource type="CapsuleShape2D" id=1]

[sub_resource type="Animation" id=2]
resource_name = "Active"

[sub_resource type="Animation" id=3]
length = 0.1
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 0.105882, 0.0117647, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=4]
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("CarBody:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, false, true ]
}

[sub_resource type="Animation" id=5]
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.01 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.01 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[node name="PlayerCar" type="KinematicBody2D"]
position = Vector2( 48, 112 )
script = ExtResource( 3 )

[node name="CarBody" type="Node2D" parent="."]

[node name="RedCar" type="Sprite" parent="CarBody"]
visible = false
rotation = 1.5708
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 2 )

[node name="Ligths" type="Node2D" parent="CarBody"]
visible = false

[node name="CarLight2" type="Sprite" parent="CarBody/Ligths"]
position = Vector2( 24, 6 )
rotation = 1.5708
scale = Vector2( 0.3, 0.2 )
texture = ExtResource( 5 )

[node name="CarLight" type="Sprite" parent="CarBody/Ligths"]
position = Vector2( 24, -6 )
rotation = 1.5708
scale = Vector2( 0.3, 0.2 )
texture = ExtResource( 5 )

[node name="PlayerFSM" type="Node2D" parent="."]
script = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = 1.5708
shape = SubResource( 1 )

[node name="CollideRaycasts" type="Node2D" parent="."]

[node name="Front" type="RayCast2D" parent="CollideRaycasts"]
position = Vector2( 17.8354, 0 )
rotation = -1.5708
scale = Vector2( 2, 0.5 )
enabled = true
cast_to = Vector2( 0, 10 )

[node name="Back" type="RayCast2D" parent="CollideRaycasts"]
position = Vector2( -18.6852, 0 )
rotation = 1.5708
scale = Vector2( 2, 0.5 )
enabled = true
cast_to = Vector2( 0, 10 )

[node name="Left" type="RayCast2D" parent="CollideRaycasts"]
position = Vector2( 0, -10.6073 )
scale = Vector2( 3.5, 0.4 )
enabled = true
cast_to = Vector2( 0, -10 )

[node name="Right" type="RayCast2D" parent="CollideRaycasts"]
position = Vector2( 0, 10.4221 )
scale = Vector2( 3.5, 0.4 )
enabled = true
cast_to = Vector2( 0, 10 )

[node name="Camera2D" type="Camera2D" parent="."]

[node name="HealthDisplay" parent="." instance=ExtResource( 1 )]

[node name="Label" type="Label" parent="HealthDisplay"]
visible = false
margin_left = -16.0
margin_top = -38.0
margin_right = 16.0
margin_bottom = -24.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EffectsAnim" type="AnimationPlayer" parent="."]
anims/Active = SubResource( 2 )
anims/damage = SubResource( 3 )
anims/flash = SubResource( 4 )
anims/rest = SubResource( 5 )

[node name="IFrames" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[connection signal="timeout" from="IFrames" to="." method="_on_IFrames_timeout"]
